# QT_C_Project3_Right_Triangle

./: CMakeLists.txt  main.c
